# phoebot

./: .bazelrc  .gitignore  1  BUILD.bazel  LICENSE  Makefile  README.md  TODO  WORKSPACE  builddata.go  deps.bzl  go.mod  go.sum  loop.sh  main.go  moo  parse.go  pbf_developertools.go  pbf_status.go  pbf_subscriptions.go  pbf_template.go  pbf_timezones.go  pbf_versions.go
.circleci/: config.yml
.github/: dependabot.yml
assets/: BUILD.bazel  ca-root.tar
build_tools/: k8s.bzl  workspace-status
cmd/cptest/: BUILD.bazel  main.go
cmd/idler/: BUILD.bazel  main.go
cmd/mapper/: BUILD.bazel  main.go
cmd/mojangtest/: BUILD.bazel  main.go
cmd/phoebot/: BUILD.bazel  main.go  parse.go
datapacks/phoenixcraft/data/phoenixcraft/advancements/recipes/misc/: elytra_crafting.json
datapacks/phoenixcraft_elytra_crafting/: pack.mcmeta
datapacks/phoenixcraft_elytra_crafting/data/phoenixcraft/recipes/crafting/: elytra_crafting.json
datapacks/phoenixcraft_postoffice/: pack.mcmeta
datapacks/phoenixcraft_postoffice/data/phoenixcraft/advancements/phoenixcraft/: discord.json  entrepreneur.json  gone_postal.json  return_address.json  root.json  spendthrift.json  test.json  ygm.json
db/: initdb.sql  sqitch.conf  sqitch.plan
db/deploy/: containers.sql  discordlogs.sql  drop-containers.sql  ignore.sql  initdb.sql  mailboxes.sql  map.sql  mapowner.sql  mojangreleases.sql  playerdetails.sql  poi-extras.sql  postal-tables.sql  verify-nags.sql
db/deploy/function/: onupdate.sql
db/revert/: containers.sql  discordlogs.sql  drop-containers.sql  ignore.sql  initdb.sql  mailboxes.sql  map.sql  mapowner.sql  mojangreleases.sql  playerdetails.sql  poi-extras.sql  postal-tables.sql  verify-nags.sql
db/revert/function/: onupdate.sql
db/verify/: containers.sql  discordlogs.sql  drop-containers.sql  ignore.sql  initdb.sql  mailboxes.sql  map.sql  mapowner.sql  mojangreleases.sql  playerdetails.sql  poi-extras.sql  postal-tables.sql  verify-nags.sql
db/verify/function/: onupdate.sql
docs/: README.md  commands.md  discord.md  mailboxes.md  merchants.md
functions/: BUILD.bazel  developertools.go  pbf_timezones.go  status.go  subscriptions.go  template.go  versions.go
hooks/: BUILD.bazel  avenger.go  developertools.go  linking.go  main.go  mapping.go  merchants.go  portals.go  say.go  serverinfo.go  status.go  subscriptions.go  template.go  timezones.go  versions.go
k8s/: .gitignore  active-deployment.yaml  deployment.yaml  dev-deployment.yaml  legacy-deployment.yaml  main-deployment.yaml  namespace.yaml  smp-deployment.yaml  template_configmap.yaml
lib/builddata/: BUILD.bazel  main.go
lib/config/: BUILD.bazel  main.go
lib/console/: BUILD.bazel  blocks.go  main.go  playerdata.go  server.go
lib/containers/: BUILD.bazel  main.go
lib/coreprotect/: BUILD.bazel  block.go  blockdata.go  container.go  main.go  sign.go
lib/db/: BUILD.bazel  main.go
lib/discord/: BUILD.bazel  main.go
lib/ipc/: BUILD.bazel  main.go
lib/mapping/: BUILD.bazel  main.go  poi.go
lib/mcserver/: BUILD.bazel  main.go
lib/merchant/: BUILD.bazel  main.go
lib/phoelib/: BUILD.bazel  main.go
lib/player/: BUILD.bazel  linking.go  main.go
lib/postal/: BUILD.bazel  mailbox.go  main.go  parsers.go
lib/products/: BUILD.bazel  main.go
lib/state/: BUILD.bazel  builddata.go  main.go
lib/subscriptions/: BUILD.bazel  main.go
models/: BUILD.bazel  main.go
papermc/: BUILD.bazel  main.go
products/mojang/: BUILD.bazel  main.go
products/papermc/: BUILD.bazel  main.go
products/serverpro/: BUILD.bazel  main.go
serverpro/: BUILD.bazel  main.go
state/: BUILD.bazel  main.go
tools/mapper/: main.go  mapper
