load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "developertools.go",
        "main.go",
        "say.go",
        "status.go",
        "subscriptions.go",
        "template.go",
        "timezones.go",
        "versions.go",
    ],
    importpath = "github.com/nugget/phoebot/hooks",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/builddata:go_default_library",
        "//lib/discord:go_default_library",
        "//lib/ipc:go_default_library",
        "//lib/phoelib:go_default_library",
        "//lib/products:go_default_library",
        "//lib/subscriptions:go_default_library",
        "//models:go_default_library",
        "//vendor/github.com/blang/semver:go_default_library",
        "//vendor/github.com/bwmarrin/discordgo:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)
