load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "avenger.go",
        "developertools.go",
        "linking.go",
        "main.go",
        "mapping.go",
        "portals.go",
        "say.go",
        "serverinfo.go",
        "status.go",
        "subscriptions.go",
        "template.go",
        "timezones.go",
        "versions.go",
    ],
    importpath = "github.com/nugget/phoebot/hooks",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/builddata:go_default_library",
        "//lib/console:go_default_library",
        "//lib/db:go_default_library",
        "//lib/discord:go_default_library",
        "//lib/ipc:go_default_library",
        "//lib/mapping:go_default_library",
        "//lib/mcserver:go_default_library",
        "//lib/phoelib:go_default_library",
        "//lib/player:go_default_library",
        "//lib/products:go_default_library",
        "//lib/subscriptions:go_default_library",
        "//models:go_default_library",
        "@com_github_blang_semver//:go_default_library",
        "@com_github_bwmarrin_discordgo//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
