load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/nugget/phoebot/cmd/cptest",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/coreprotect:go_default_library",
        "//lib/db:go_default_library",
        "//lib/postal:go_default_library",
        "@com_github_nugget_phoebot//lib/merchant:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_binary(
    name = "cptest",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
