load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/nugget/phoebot/cmd/mapper",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/db:go_default_library",
        "//lib/mapping:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/github.com/spf13/viper:go_default_library",
    ],
)

go_binary(
    name = "mapper",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
