load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/nugget/phoebot/cmd/mapper",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/db:go_default_library",
        "//lib/mapping:go_default_library",
        "//lib/phoelib:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
    ],
)

go_binary(
    name = "mapper",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
