load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/nugget/phoebot/lib/coreprotect",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/phoelib:go_default_library",
        "@com_github_go_sql_driver_mysql//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
