load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/nugget/phoebot/lib/db",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/builddata:go_default_library",
        "@com_github_lib_pq//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
