load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/nugget/phoebot/lib/mcserver",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/ipc:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_tidwall_gjson//:go_default_library",
        "@com_github_tnze_go_mc//bot:go_default_library",
        "@com_github_tnze_go_mc//chat:go_default_library",
        "@com_github_tnze_go_mc//data/lang/en-us:go_default_library",
        "@com_github_tnze_go_mc//yggdrasil:go_default_library",
    ],
)
