load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/nugget/phoebot/lib/phoelib",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/builddata:go_default_library",
        "//lib/db:go_default_library",
        "@com_github_bwmarrin_discordgo//:go_default_library",
        "@com_github_gemnasium_logrus_graylog_hook_v3//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
