load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/nugget/phoebot/lib/player",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/db:go_default_library",
        "//lib/phoelib:go_default_library",
        "@com_github_bwmarrin_discordgo//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
