load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "parsers.go",
    ],
    importpath = "github.com/nugget/phoebot/lib/postal",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/console:go_default_library",
        "//lib/coreprotect:go_default_library",
        "//lib/db:go_default_library",
        "//lib/discord:go_default_library",
        "//lib/ipc:go_default_library",
        "//lib/phoelib:go_default_library",
        "//lib/player:go_default_library",
        "//models:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
