load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "mailbox.go",
        "main.go",
        "parsers.go",
    ],
    importpath = "github.com/nugget/phoebot/lib/postal",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/config:go_default_library",
        "//lib/console:go_default_library",
        "//lib/containers:go_default_library",
        "//lib/coreprotect:go_default_library",
        "//lib/db:go_default_library",
        "//lib/phoelib:go_default_library",
        "//lib/player:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
