load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/nugget/phoebot/products/papermc",
    visibility = ["//visibility:public"],
    deps = [
        "//models:go_default_library",
        "@com_github_blang_semver//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_tidwall_gjson//:go_default_library",
    ],
)
