load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/nugget/phoebot/products/serverpro",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/ipc:go_default_library",
        "//lib/products:go_default_library",
        "//models:go_default_library",
        "//vendor/github.com/blang/semver:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/github.com/tidwall/gjson:go_default_library",
    ],
)
